# rc

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
src/: main.rs  options.rs
src/codecs/: ascii.rs  base64.rs  binary.rs  codec.rs  error.rs  hex.rs  mod.rs  raw.rs  rot13.rs  spelling.rs  utf8.rs
