[package]
name = "rc"
version = "0.1.3"
authors = ["Elliot Cubit <elliotcubit@gmail.com>"]
description = "Text encoding swiss army knife"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
isatty = "0.1"
